<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_general_hw</name>
  <version>0.0.0</version>
  <description>General ros_control layer for Dynamixel actuators</description>

  <maintainer email="pazeshun3682@gmail.com">Shun Hasegawa</maintainer>
  <author email="pazeshun3682@gmail.com">Shun Hasegawa</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>dynamixel_workbench_msgs</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>hardware_interface</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>transmission_interface</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
