<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamixel_workbench</name>
  <version>2.0.0</version>
  <description>
    Dynamixel-Workbench is dynamixel solution for ROS.
    This metapackage allows you to easily change the ID, baudrate and operating mode of the Dynamixel.
    Furthermore, it supports various controllers based on operating mode and Dynamixel SDK.
    These controllers are commanded by operators.
  </description>
  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <maintainer email="thlim@robotis.com">Darby Lim</maintainer>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <url type="website">http://wiki.ros.org/dynamixel_workbench</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/software/dynamixel/dynamixel_workbench/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/dynamixel-workbench</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/dynamixel-workbench/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>dynamixel_workbench_toolbox</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
