<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamixel_workbench</name>
  <version>2.2.3</version>
  <description>
    Dynamixel-Workbench is dynamixel solution for ROS.
    This metapackage allows you to easily change the ID, baudrate and operating mode of the Dynamixel.
    Furthermore, it supports various controllers based on operating mode and Dynamixel SDK.
    These controllers are commanded by operators.
  </description>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/dynamixel_workbench</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/dynamixel-workbench</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/dynamixel-workbench/issues</url>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="willson@robotis.com">Will Son</author>
  <author>Ryan Shim</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>dynamixel_workbench_toolbox</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
