<?xml version="1.0"?>
<package>
  <name>dynamixel_workbench_controllers</name>
  <version>1.0.0</version>
  <description>The dynamixel_workbench_controllers package</description>

  <maintainer email="pyo@robotis.com">Pyo</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/ROBOTIS-GIT/dynamixel-workbench/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/dynamixel-workbench</url>
  <url type="website">http://wiki.ros.org/dynamixel_workbench</url>

  <author email="thlim@robotic.com">Darby Lim</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamixel_workbench_msgs</build_depend>
  <build_depend>dynamixel_workbench_toolbox</build_depend>
  <build_depend>dynamixel_sdk</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamixel_workbench_msgs</run_depend>
  <run_depend>dynamixel_workbench_toolbox</run_depend>
  <run_depend>dynamixel_sdk</run_depend>

  <export>

  </export>
</package>
