<?xml version="1.0"?>
<package>
  <name>dynamixel_workbench_msgs</name>
  <version>1.0.0</version>
  <description>The dynamixel_workbench_msgs package</description>

  <maintainer email="pyo@robotis.com">Pyo</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/ROBOTIS-GIT/dynamixel-workbench/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/dynamixel-workbench</url>
  <url type="website">http://wiki.ros.org/dynamixel_workbench</url>

  <author email="thlim@robotis.com">Darby Lim</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
