<?xml version="1.0"?>
<package>
  <name>dynamixel_workbench_operators</name>
  <version>0.1.8</version>
  <description>
    This package contains nodes that control the Dynamixel by communicating with the server registered in the 'dynamixel_workbench_controllers' package
  </description>
  <license>Apache License 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/dynamixel-workbench/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/dynamixel-workbench</url>
  <url type="website">http://wiki.ros.org/dynamixel_workbench</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamixel_workbench_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dynamixel_workbench_msgs</run_depend>
  <export></export>
</package>
